Timelinespans loaded from array per Timeline Element. Fixed timelinespan elements being unaligned

--- a/web/src/TimelineSpan.scss
+++ b/web/src/TimelineSpan.scss
@@ -1,5 +1,5 @@
 .timelinespan {
-  position: sticky;
+  position: absolute;
   display: inline-block;
   background-color: #ef4f4f;
   height: 12px;
